crates/atlas-cli/tests/snapshots/typecheck_dump_tests__typecheck_dump_function.snap
---
source: crates/atlas-cli/tests/typecheck_dump_tests.rs
expression: json
---
{
  "typecheck_version": 1,
  "symbols": [
    {
      "name": "E",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "LN10",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "LN2",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "PI",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "SQRT2",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "add",
      "kind": "function",
      "start": 4,
      "end": 7,
      "type": "(number, number) -> number",
      "mutable": false
    }
  ],
  "types": [
    {
      "name": "(number, number) -> number",
      "kind": "function",
      "details": "signature: (number, number) -> number"
    },
    {
      "name": "number",
      "kind": "primitive"
    }
  ]
}
