crates/atlas-cli/tests/snapshots/typecheck_dump_tests__typecheck_dump_mutable_variable.snap
---
source: crates/atlas-cli/tests/typecheck_dump_tests.rs
expression: json
---
{
  "typecheck_version": 1,
  "symbols": [
    {
      "name": "E",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "LN10",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "LN2",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "PI",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "SQRT2",
      "kind": "builtin",
      "start": 0,
      "end": 0,
      "type": "number",
      "mutable": false
    },
    {
      "name": "counter",
      "kind": "variable",
      "start": 4,
      "end": 11,
      "type": "number",
      "mutable": true
    }
  ],
  "types": [
    {
      "name": "number",
      "kind": "primitive"
    }
  ]
}
